--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
     <script>
         // Replace with your OpenWeatherMap API key from https://openweathermap.org/api
-        const API_KEY = 'YOUR_API_KEY_HERE';
+        const API_KEY = '197199efb21fadc58ee99bc5c364d16f';
         const API_URL = 'https://api.openweathermap.org/data/2.5/weather';
 
         const cityInput = document.getElementById('cityInput');
