--- a/index.html
+++ b/index.html
@@ -444,10 +444,11 @@
 
             try {
                 // WeatherAPI.com supports CORS and works instantly!
-                // Request forecast for 1 day (includes 24 hours of hourly data)
-                const url = `${API_URL}?key=${API_KEY}&q=${encodeURIComponent(city)}&days=1&aqi=no&alerts=no`;
+                // Request forecast - using hours parameter for hourly data
+                const url = `${API_URL}?key=${API_KEY}&q=${encodeURIComponent(city)}&days=2&aqi=no&alerts=no`;
                 
                 console.log('Fetching weather for:', city);
+                console.log('Request URL:', url);
                 
                 const response = await fetch(url);
 
@@ -517,6 +518,11 @@
         function displayHourlyForecast(hours) {
             const hourlyContainer = document.getElementById('hourlyForecast');
             hourlyContainer.innerHTML = '';
+
+            if (!hours || hours.length === 0) {
+                hourlyContainer.innerHTML = '<p style="text-align: center; color: #666;">Hourly forecast not available</p>';
+                return;
+            }
 
             // Get current hour
             const now = new Date();
