--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             try {
                 // WeatherAPI.com supports CORS and works instantly!
                 // Request forecast - using hours parameter for hourly data
-                const url = `${API_URL}?key=${API_KEY}&q=${encodeURIComponent(city)}&days=2&aqi=no&alerts=no`;
+                const url = `${FORECAST_URL}?key=${API_KEY}&q=${encodeURIComponent(city)}&days=2&aqi=no&alerts=no`;
                 
                 console.log('Fetching weather for:', city);
                 console.log('Request URL:', url);
