--- a/index.html
+++ b/index.html
@@ -53,13 +53,20 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
+            gap: 15px;
             margin-bottom: 30px;
         }
 
-        .rit-logo {
-            width: 80px;
-            height: 80px;
+        .rit-logo-text {
+            font-size: 4em;
+            font-weight: bold;
+            color: #F76902;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            letter-spacing: -5px;
+        }
+
+        .tiger-emoji {
+            font-size: 3em;
         }
 
         .rit-title {
@@ -456,9 +463,10 @@
 <body>
     <div class="container">
         <div class="rit-header">
-            <img src="https://www.rit.edu/contentassets/0e4a969fc16149469bce9d924f286620/rit_logo.png" alt="RIT Logo" class="rit-logo">
+            <span class="rit-logo-text">RIT</span>
+            <span class="tiger-emoji">🐯</span>
             <div class="rit-title">
-                <h1>🌤️ RIT Weather Dashboard</h1>
+                <h1>Weather Dashboard</h1>
                 <p>Rochester Institute of Technology</p>
             </div>
         </div>
